chore: js codegen